--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
                 android:hint="Email"
+                app:errorEnabled="true"
                 app:startIconDrawable="@drawable/email_icon_24dp"
                 tools:ignore="HardcodedText">
 
