--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
                 android:hint="Senha"
+                app:errorEnabled="true"
                 app:endIconDrawable="@drawable/visibility_icon_24dp"
                 app:endIconMode="password_toggle"
                 app:startIconDrawable="@drawable/password_icon_24dp"
